# Text2SongStudio

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9269ea09f027_add_system_settings_table.py  a3f8b2c9d4e1_add_templates_favorites_search.py  b14ae68c2560_initial_schema.py  b1fdaef0bc6a_initial_schema.py  c25ae89d3671_add_soft_delete_columns.py  d2527305bd24_add_archived_to_experimentstatus_enum.py  d36bf90e4782_add_dataset_deleted_at.py  e47cf91a5893_add_training_logs_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  ab_test.py  adapter.py  audio.py  audio_tag.py  dataset.py  experiment.py  favorite.py  feedback.py  job.py  model_registry.py  preference_pair.py  prompt.py  prompt_template.py  quality_rating.py  system_setting.py  training_log.py
backend/app/routers/: __init__.py  ab_tests.py  adapters.py  adapters_v2.py  audio.py  datasets.py  experiments.py  favorites.py  feedback.py  generation.py  health.py  jobs.py  logs.py  metrics.py  models.py  preferences.py  prompts.py  ratings.py  tags.py  templates.py
backend/app/schemas/: __init__.py  ab_test.py  adapter.py  audio.py  audio_tag.py  dataset.py  experiment.py  favorite.py  feedback.py  generation.py  model.py  preference_pair.py  prompt.py  quality_rating.py  template.py  training_log.py
backend/app/services/: __init__.py  dataset.py  generation.py  log_capture.py  metric_parser.py  storage.py  training.py
backend/app/training/: cli.py
backend/model/training/: cli.py  config.py  preference.py  supervised.py
backend/tests/: conftest.py  test_config.py  test_deletion.py  test_health.py  test_logs.py
backend/tests/model/: test_training_config.py
backend/tests/models/: __init__.py  test_model_registry.py  test_models.py
backend/tests/routers/: __init__.py  test_adapters.py  test_audio.py  test_datasets.py  test_experiments.py  test_feedback.py  test_generation.py  test_prompts.py
backend/tests/schemas/: __init__.py  test_adapter.py  test_dataset.py  test_experiment.py  test_favorite.py  test_feedback.py  test_generation.py  test_preference_pair.py  test_prompt.py  test_template.py
backend/tests/services/: test_dataset.py  test_generation_validation.py  test_log_capture.py  test_metric_parsing.py  test_storage.py  test_training.py
example_datasets/: README.md  metadata.json  preference_dataset.jsonl  supervised_dataset.jsonl  train_preference_example.py  (+1 more)
(+324 files in other folders)
